--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.flyway.clean-on-validation-error=true
 
 #Formata a data na deserialização
 spring.jackson.date-format=yyyy-MM-dd
+
+#Define o profile ativo na aplicação
+spring.profiles.active=oauth-security
